--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,11 +1,3 @@
-h1{
-  padding-left: 50px;
-}
-h2{
-  padding-left: 50px;
-}
-
-.right{
-  display: flex;
-  justify-content: right;
+.rankertext {
+  padding-left: 60px;
 }
