--- a/src/pages/YourList/YourList.css
+++ b/src/pages/YourList/YourList.css
@@ -6,7 +6,7 @@
 .grid-header,
 .grid-item {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)) ; /* Добавляем дополнительный столбец для кнопок */
     gap: 20px;
     text-align: center;
     margin-bottom: 10px;
@@ -16,4 +16,10 @@
     border: 1px solid #ccc;
     padding: 8px;
     word-wrap: break-word;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
