--- a/src/components/Items/ItemList.css
+++ b/src/components/Items/ItemList.css
@@ -1,13 +1,20 @@
+.grid-header,
 .grid-item {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)) ; /* Дополнительный столбец для кнопок */
     gap: 20px;
     text-align: center;
     margin-bottom: 10px;
 }
 
 .grid-item > div {
-    border: 1px solid #ccc;
+    border: 0px solid #ccc;
     padding: 8px;
     word-wrap: break-word;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
