--- a/src/pages/SignIn/SignIn.css
+++ b/src/pages/SignIn/SignIn.css
@@ -1,8 +1,11 @@
-.config{
+body{
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     z-index: -1;
+}
+.box-color{
+    background-color: rgba(254, 245, 231, 0.6) ;
 }
