--- a/src/pages/Welcome/WelcomePage.css
+++ b/src/pages/Welcome/WelcomePage.css
@@ -1,3 +1,25 @@
+body{
+    margin: 0px;
+    padding: 0px;
+}
+
+
+.nav-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+
 .rankertext {
   padding-left: 60px;
+
+}
+
+.tc {
+  text-align: center;
+}
+
+.tl {
+  text-align: left;
 }
