--- a/src/pages/BracketPage/Bracket.css
+++ b/src/pages/BracketPage/Bracket.css
@@ -25,7 +25,22 @@
 .card-place {
     display: flex;
     justify-content: center;
-    gap: 10em;
+    gap: 7em;
     margin-top: 10em;
     align-content: center;
+}
+
+.itemcard {
+    cursor: pointer;
+    background-color: #EBF5FB;
+    height: 250px;
+    width: 250px;
+    border-radius: 10px;
+    align-content: center;
+    font-size: xx-large;
+}
+
+.itemcard:hover {
+    background-color: #F7DC6F;
+    color: #FEFAF9;
 }
