--- a/src/pages/Welcome/WelcomePage.css
+++ b/src/pages/Welcome/WelcomePage.css
@@ -3,26 +3,18 @@ body{
     padding: 0px;
 }
 
-
-.nav-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+.category-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start; /* Выравнивание элементов слева направо */
+    margin-top: 2rem; /* Дополнительное пространство сверху */
+    padding-left: 60px;
+}
+.card-list-container {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-
-.rankertext {
-  padding-left: 60px;
-}
-
-
-.tc {
-  text-align: center;
-}
-
-.tl {
-  text-align: left;
-}
 .header-text {
     position: relative;
     width: 100%;
@@ -32,20 +24,4 @@ body{
     height: 100px;
     padding-left: 60px;
     padding-right: 20px;
-}
-
-.sub-text {
-    padding: 35px;
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    height: 100px;
-}
-
-.category-text {
-    position: absolute;
-    top: 0;
-    left: 0;
 }
