--- a/src/pages/Welcome/WelcomePage.css
+++ b/src/pages/Welcome/WelcomePage.css
@@ -29,3 +29,24 @@ body{
 .space{
     margin-bottom: 10rem;
 }
+
+.card-container {
+    position: relative;
+}
+
+.delete-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 54px;
+    cursor: pointer;
+    color: red;
+    display: none;
+}
+.card-content {
+    position: relative;
+    display: inline-block;
+}
+.card-container:hover .delete-icon {
+    display: block;
+}
