--- a/src/pages/YourList/YourList.css
+++ b/src/pages/YourList/YourList.css
@@ -23,6 +23,12 @@
     justify-content: center;
     gap: 10px;
 }
+.center-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
 
 .header {
     position: relative;
@@ -53,12 +59,41 @@
     background-color: rgba(254, 245, 231, 0.4) ;
 }
 .winner-title {
-    color: #FFD700; /* золотой цвет */
+    color: white; /* золотой цвет */
     font-size: 1.5rem;
     font-weight: bold;
     margin-top: 1rem;
     margin-bottom: 1rem;
     text-align: center;
+    width: fit-content;
+    height: fit-content;
+    padding: 2rem;
+    border-radius: 90px;
+    background: #e65c00;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #F9D423, #e65c00);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #F9D423, #e65c00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: 200% 200%;
+    animation: gradient-animation 4s ease infinite;
+}
+
+@keyframes gradient-animation {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+
+.winner-title:hover {
+    background: #3CA55C;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #B5AC49, #3CA55C);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #B5AC49, #3CA55C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: 200% 200%;
+    animation: gradient-animation-hover 2s ease infinite;
+}
+
+@keyframes gradient-animation-hover {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
 }
 .space{
     margin-bottom: 10rem;
