--- a/src/pages/Welcome/WelcomePage.css
+++ b/src/pages/Welcome/WelcomePage.css
@@ -6,8 +6,8 @@ body{
 .category-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start; /* Выравнивание элементов слева направо */
-    margin-top: 2rem; /* Дополнительное пространство сверху */
+    justify-content: flex-start;
+    margin-top: 2rem;
     padding-left: 60px;
 }
 .card-list-container {
@@ -49,4 +49,57 @@ body{
 }
 .card-container:hover .delete-icon {
     display: block;
+}
+.features-section {
+    margin-top: 3rem;
+    padding: 0 2rem;
+}
+
+.features-title {
+    font-size: 1.5rem;
+    color: #f0e68c;
+    margin-bottom: 1rem;
+}
+
+.features-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.feature-item {
+    width: 45%;
+    margin-bottom: 2rem;
+    background-color: #282c34;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: left;
+}
+
+.feature-item h4 {
+    margin-top: 0;
+    color: #f0e68c;
+}
+.pad-left{
+    padding-left: 60px;
+}
+
+.footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #333;
+    color: #f0e68c;
+}
+.intro-section {
+    text-align: left;
+    margin-top: 2rem;
+}
+
+.intro-text {
+    font-size: 1.2rem;
+    color: #f0e68c;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
 }
