--- a/src/components/Items/ItemList.css
+++ b/src/components/Items/ItemList.css
@@ -1,7 +1,7 @@
 .grid-header,
 .grid-item {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)) ; /* Дополнительный столбец для кнопок */
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)) ;
     gap: 20px;
     text-align: center;
     margin-bottom: 10px;
