--- a/src/pages/CreatList/CreatList.css
+++ b/src/pages/CreatList/CreatList.css
@@ -14,14 +14,14 @@ html, body {
 }
 
 .input-container {
-    width: 50%; /* Устанавливаем фиксированную ширину контейнера */
-    max-width: 600px; /* Максимальная ширина контейнера */
-    margin: 0 auto; /* Центрируем контейнер */
+    width: 50%;
+    max-width: 600px;
+    margin: 0 auto;
 }
 
 input[type="text"] {
-    width: 100%; /* Ширина поля ввода всегда 100% от контейнера */
-    box-sizing: border-box; /* Включаем padding и border в общую ширину и высоту элемента */
+    width: 100%;
+    box-sizing: border-box;
     margin: 10px;
 }
 
