--- a/src/pages/YourList/YourList.css
+++ b/src/pages/YourList/YourList.css
@@ -6,7 +6,7 @@
 .grid-header,
 .grid-item {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)) ; /* Дополнительный столбец для кнопок */
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)) ;
     gap: 20px;
     text-align: center;
     margin-bottom: 10px;
@@ -59,7 +59,7 @@
     background-color: rgba(254, 245, 231, 0.4) ;
 }
 .winner-title {
-    color: white; /* золотой цвет */
+    color: white;
     font-size: 1.5rem;
     font-weight: bold;
     margin-top: 1rem;
